<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ithome"
        android:title="@string/home"
        android:icon="@drawable/baseline_account_balance_white_24"/>
    <item
        android:id="@+id/itphuongphap"
        android:title="@string/methodlearn"
        android:icon="@drawable/ic_lightbulb_outline_white_24dp"/>
    <item
        android:id="@+id/itguide"
        android:title="@string/guidelearn"
        android:icon="@drawable/ic_near_me_white_24dp"/>
  <!--  <item
        android:id="@+id/itsetting"
        android:title="@string/Setting"
        android:icon="@drawable/ic_settings_white_24dp"/>-->
    <item
        android:id="@+id/itrate"
        android:title="@string/rate"
        android:icon="@drawable/ic_star_rate_white_18dp"/>

</menu>